# osx-integration

./: CMakeLists.txt  README.md  qt510x.branch  qt580.branch  qt590-r2l.branch  qt590.branch
src/: CMakeLists.txt
src/platformtheme/: CMakeLists.txt  kdemactheme.h  kdemactheme.mm  kdeplatformfiledialoghelper.cpp  kdeplatformfiledialoghelper.h  kdeplatformsystemtrayicon.cpp  kdeplatformtheme.cpp  kdeplatformtheme.h  kdirselectdialog.cpp  kfontsettingsdata.cpp  kfontsettingsdata.h  kfontsettingsdatamac.h  kfontsettingsdatamac.mm  khintssettings.cpp  khintssettings.h  khintssettingsmac.h  khintssettingsmac.mm  main_cocoa.cpp  main_kde.cpp
src/qcocoa-qpa/: CMakeLists.txt  README.ALT  cocoa.json  cocoa.pro  messages.cpp  messages.h  qcocoaapplicationdelegate.h  qcocoaapplicationdelegate.mm  qcocoacolordialoghelper.mm  qcocoadrag.h  qcocoafiledialoghelper.mm  qcocoafontdialoghelper.mm  qcocoahelpers.mm  qcocoaintegration.h  qcocoaintegration.mm  qcocoakeymapper.h  qcocoakeymapper.mm  qcocoamenu.h  qcocoamenu.mm  qcocoamenuitem.h  qcocoamenuitem.mm  qcocoamenuloader.h  qcocoamenuloader.mm  qcocoanativeinterface.mm  qcocoasystemsettings.mm  qcocoatheme.h  qcocoatheme.mm  qcocoawindow.h  qcocoawindow.mm  qnsview.mm  qnswindow.h  qnswindow.mm  qnswindowdelegate.mm  qpaintengine_mac.mm
src/qcocoa-qpa/patches/: 24b-patch-build-on-OSX109.diff  26-sync-upstream-171219.diff  27-patch-freetype-improvements.diff  28-patch-use-fontconfig.diff  (+7 more)
src/qmacstyle/: CMakeLists.txt  README.ALT  macstyle.json  macstyle.pro  qmacstyle_mac.mm  qmacstyle_mac_p.h  qmacstyle_mac_p_p.h
(+26 files in other folders)
